# ferropress

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE-APACHE  README.md  rust-toolchain.toml
.github/workflows/: ci.yml
crates/ferropress-admin/: Cargo.toml
crates/ferropress-admin/src/: lib.rs
crates/ferropress-blob-localfs/: Cargo.toml
crates/ferropress-blob-localfs/src/: lib.rs
crates/ferropress-cert-acme/: Cargo.toml
crates/ferropress-cert-acme/src/: lib.rs
crates/ferropress-core/: Cargo.toml
crates/ferropress-core/src/: block.rs  error.rs  hook.rs  ids.rs  lib.rs  plugin_caps.rs  ports.rs  query.rs  role.rs  seo.rs  status.rs  store.rs  value.rs
crates/ferropress-core/src/entity/: comment.rs  media.rs  menu.rs  mod.rs  page.rs  post.rs  redirect.rs  revision.rs  setting.rs  taxonomy.rs  user.rs
crates/ferropress-core/tests/: ports_object_safety.rs
crates/ferropress-http/: Cargo.toml
crates/ferropress-http/src/: lib.rs  tests.rs
crates/ferropress-http/src/island/: comments.rs  mod.rs  search.rs  tests.rs
crates/ferropress-islands/: Cargo.toml
crates/ferropress-islands/design/: mockup.html
crates/ferropress-islands/src/: api.rs  comments.rs  lib.rs  search.rs
crates/ferropress-plugin-host/: Cargo.toml
crates/ferropress-plugin-host/src/: lib.rs  tests.rs
crates/ferropress-render/: Cargo.toml
crates/ferropress-render-form/: Cargo.toml
crates/ferropress-render-form/src/: lib.rs
crates/ferropress-render/src/: blocks.rs  lib.rs
crates/ferropress-sched-tokiocron/: Cargo.toml
crates/ferropress-sched-tokiocron/src/: lib.rs
crates/ferropress-schema/: Cargo.toml
crates/ferropress-schema-sdl/: Cargo.toml
crates/ferropress-schema-sdl/src/: lib.rs
crates/ferropress-schema/src/: main.rs
crates/ferropress-secrets-env/: Cargo.toml
crates/ferropress-secrets-env/src/: lib.rs
crates/ferropress-serve/: Cargo.toml
crates/ferropress-serve/src/: content.rs  hook_bridge.rs  lib.rs  tests.rs
crates/ferropress-server/: Cargo.toml
crates/ferropress-server/src/: config.rs  main.rs
crates/ferropress-store-embedded/: Cargo.toml
crates/ferropress-store-embedded/src/: content_reader.rs  content_writer.rs  convert.rs  error.rs  lib.rs  store_impl.rs
crates/ferropress-theme/: Cargo.toml
crates/ferropress-theme/src/: lib.rs
plugins/audit-log/: Cargo.toml  plugin.toml
plugins/audit-log/src/: lib.rs
plugins/backlink-index/: Cargo.toml  plugin.toml
plugins/backlink-index/src/: lib.rs
plugins/callout/: Cargo.toml  plugin.toml
plugins/callout/src/: lib.rs
plugins/comment-mod/: Cargo.toml  plugin.toml
plugins/comment-mod/src/: lib.rs
plugins/wiki/: Cargo.toml  plugin.toml
plugins/wiki/src/: lib.rs
xtask/: Cargo.toml
xtask/src/: main.rs
