# Ferropress — virtual workspace manifest.
#
# House style (joeleaver): virtual manifest at the root (no [package]); every
# member lives under crates/<prefix>-<name>; all shared deps are declared ONCE
# here and inherited with `{ workspace = true }`. Edition 2024.
#
# Upstream policy (CLAUDE.md §2): rinch / rhypedb / jkbase are REAL external
# upstreams. They are NEVER depended on via `path = "../…"`. rhypedb is pulled
# by git, pinned to an exact rev so every rhypedb-* crate resolves to the same
# tree (they share version 0.1.0 in one repo — mixing revs is unsupported).
#
# rinch is consumed ONLY by the excluded `crates/ferropress-islands` (a wasm32
# cdylib, outside this workspace, which pins rinch by git rev directly) — so rinch
# has NO entry in [workspace.dependencies] and never enters the host workspace
# graph. The admin / render-form crates remain rinch-free compiling placeholders
# until their upstream rinch features land.
#
# Dependency-graph invariant (enforced by xtask + CI): rhypedb appears ONLY on
# ferropress-store-embedded (engine/subscribe) and ferropress-schema-sdl
# (schema only). ferropress-core carries no rhypedb, no rinch, no jkbase.

[workspace]
resolver = "2"
members = ["crates/*"]
# Intentionally OUT of the workspace:
#   * xtask — a CI lint tool; we don't want its (heavier) deps polluting the
#     workspace dependency graph it audits. Invoked via `--manifest-path xtask/`.
#   * crates/ferropress-islands — a wasm32-only `cdylib` depending on rinch-web
#     (browser/web_sys only). The workspace's host `cargo check --workspace`
#     cannot build it, so it lives outside with its OWN Cargo.lock and is built
#     for wasm via `cargo xtask build-islands`.
#   * plugins/ — reference WASM plugins (Extism PDK, wasm32 `cdylib`s). Built via
#     `cargo xtask build-plugins`; loaded at runtime by ferropress-plugin-host.
exclude = ["xtask", "crates/ferropress-islands", "plugins"]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
repository = "https://github.com/joeleaver/ferropress"
rust-version = "1.85"

# ---------------------------------------------------------------------------
# Workspace lints. Members opt in with `[lints] workspace = true`. CI gates on
# `-D warnings`, so this is the single place the warning posture is set.
# ---------------------------------------------------------------------------
[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }

[workspace.dependencies]
# --- First-party crates (path; listed first per house style) -----------------
ferropress-core            = { path = "crates/ferropress-core" }
ferropress-schema-sdl      = { path = "crates/ferropress-schema-sdl" }
ferropress-store-embedded  = { path = "crates/ferropress-store-embedded" }
ferropress-render          = { path = "crates/ferropress-render" }
ferropress-render-form     = { path = "crates/ferropress-render-form" }
ferropress-theme           = { path = "crates/ferropress-theme" }
ferropress-secrets-env     = { path = "crates/ferropress-secrets-env" }
ferropress-blob-localfs    = { path = "crates/ferropress-blob-localfs" }
ferropress-sched-tokiocron = { path = "crates/ferropress-sched-tokiocron" }
ferropress-cert-acme       = { path = "crates/ferropress-cert-acme" }
ferropress-plugin-host     = { path = "crates/ferropress-plugin-host" }
ferropress-serve           = { path = "crates/ferropress-serve" }
ferropress-http            = { path = "crates/ferropress-http" }
ferropress-admin           = { path = "crates/ferropress-admin" }
# NB: ferropress-islands is NOT listed here — it is excluded from the workspace
# (wasm32-only cdylib, see [workspace].exclude) and declares its deps directly.

# --- rhypedb (UPSTREAM, git, pinned rev) -------------------------------------
# ALL rhypedb-* deps MUST share this exact pinned rev (the crates share one repo
# + version 0.1.0; mixing revs is unsupported upstream). The pin is deliberate.
# engine: default-features = false + onnx-dynamic so `cargo build` needs no
# network and ONNX is dlopen'd at runtime (ORT_DYLIB_PATH) — the offline build
# posture. Only ferropress-store-embedded enables engine/subscribe;
# ferropress-schema-sdl uses rhypedb-schema (no ONNX feature surface at all).
rhypedb-schema = { git = "https://github.com/joeleaver/rhypedb.git", rev = "2a9bf28686c6602ccabbb9efb0e06922efd9fc1a" }
rhypedb-engine = { git = "https://github.com/joeleaver/rhypedb.git", rev = "2a9bf28686c6602ccabbb9efb0e06922efd9fc1a", default-features = false, features = ["onnx-dynamic"] }
rhypedb-subscribe = { git = "https://github.com/joeleaver/rhypedb.git", rev = "2a9bf28686c6602ccabbb9efb0e06922efd9fc1a" }

# --- Async runtime -----------------------------------------------------------
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
async-trait = "0.1"
futures-core = "0.3"
futures-util = "0.3"

# --- HTTP / server stack -----------------------------------------------------
axum = "0.8"
tower = "0.5"
tower-http = { version = "0.6", features = ["fs", "trace"] }
# rustls, never native-tls (house invariant). Only used if a crate needs an
# outbound client; kept here so the pick is centralized.
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }

# --- Serialization -----------------------------------------------------------
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

# --- WASM plugin runtime -----------------------------------------------------
# The embedded plugin runtime is the `extism` host SDK (it bundles wasmtime,
# ">=27,<31"). It gives us owned limits (with_timeout + with_memory_max),
# deny-by-default host functions + allowed_hosts, and PDK compatibility, behind
# our own `PluginHost` seam. `wasmtime` stays declared in case a crate needs the
# raw engine later, but `ferropress-plugin-host` uses `extism`.
wasmtime = "27"
extism = "1"

# --- Templating / rendering --------------------------------------------------
minijinja = { version = "2", features = ["loader"] }
html-escape = "0.2"

# --- Scheduler / certs / secrets adapters ------------------------------------
cron = "0.12"
rustls-acme = "0.13"
dotenvy = "0.15"

# --- CLI / logging -----------------------------------------------------------
clap = { version = "4", features = ["derive", "env"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# --- Error handling ----------------------------------------------------------
thiserror = "2"
anyhow = "1"

# --- Common utilities --------------------------------------------------------
bytes = "1"
uuid = { version = "1", features = ["v4", "v7", "serde"] }
time = { version = "0.3", features = ["serde", "formatting", "parsing"] }
parking_lot = "0.12"

# --- Dev / test --------------------------------------------------------------
tempfile = "3"
