[package]
name = "ferropress-blob-localfs"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "BlobStore baseline adapter: local filesystem storage for media originals and prerendered HTML output."

[lints]
workspace = true

[dependencies]
ferropress-core = { workspace = true }
async-trait = { workspace = true }
tokio = { workspace = true }
