[package]
name = "ferropress-http"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Owned in-process HTTP server (axum): routing, static serving of prerendered output, and the rhypedb-backed island API (semantic search, comments). Public serving is never delegated. Stub scaffold."

[lints]
workspace = true

[dependencies]
ferropress-core = { workspace = true }
ferropress-serve = { workspace = true }
ferropress-theme = { workspace = true }
ferropress-render = { workspace = true }
# Owned HTTP stack. The Router/handlers land on these once routes are filled in;
# declared now as the intended in-process serving edge (invariant #6).
axum = { workspace = true }
tower-http = { workspace = true }
tokio = { workspace = true }
