[package]
name = "ferropress-http"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Owned in-process HTTP server (axum): routing, static serving of prerendered output, and the rhypedb-backed island API (semantic search, comments). Public serving is never delegated. Stub scaffold."

[lints]
workspace = true

[dependencies]
ferropress-core = { workspace = true }
ferropress-serve = { workspace = true }
ferropress-theme = { workspace = true }
ferropress-render = { workspace = true }
# Owned HTTP stack (invariant #6: serving is owned, never delegated).
axum = { workspace = true }
tower-http = { workspace = true }
tokio = { workspace = true }
# Island API request/response bodies (search results, comment list/create) are
# JSON; serde derives the DTOs, serde_json is the codec axum's `Json` uses.
serde = { workspace = true }
serde_json = { workspace = true }
# Comment timestamps (RFC3339 — lexicographically chronological, so list sort is
# a plain string compare).
time = { workspace = true }
# Request/response + error logging (causes logged, never leaked to the client).
tracing = { workspace = true }

[dev-dependencies]
# The end-to-end test drives the real router against a real embedded store +
# local-FS blobs (proving store -> render -> theme -> http). Depending on
# `ferropress-store-embedded` here pulls NO rhypedb edge into http's own
# manifest — store-embedded is the membrane (dep-graph lint flags only DIRECT
# `rhypedb-*` deps, which stay on store-embedded/schema-sdl).
ferropress-store-embedded = { workspace = true }
ferropress-blob-localfs = { workspace = true }
# The custom-block e2e test drives a real plugin host (loading the built callout
# wasm) as the AppState renderer, proving router -> serve -> render -> plugin.
# (serde_json is already a normal dep, used by the test to build the block data.)
ferropress-plugin-host = { workspace = true }
# `tower::ServiceExt::oneshot` feeds a synthetic request through the router with
# no socket; tempfile gives each test run an isolated store/blob dir.
tower = { workspace = true }
tempfile = { workspace = true }
# The search test drives the handler with a `RhypeStore` DOUBLE (canned
# vector_search + get_many) so the mapping / ranking / publish-gate logic is
# tested WITHOUT the runtime ONNX model. async-trait writes the trait impl;
# futures-core names `BoxStream` in the (unused) `subscribe` signature.
async-trait = { workspace = true }
futures-core = { workspace = true }
