[package]
name = "ferropress-islands"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Public-site rinch island components (semantic-search box, live comments). rinch implementation pending upstream; rinch-free placeholder for now."

[lints]
workspace = true

[dependencies]
# NOTE: rinch is DEFERRED. These are the public-site island components that
# hydrate into prerendered HTML; they need rinch multi-root mount, which is
# upstream rinch #53 (the furthest-out of the rinch blockers). Once that lands
# this crate gains the rinch / rinch-web dependency, `crate-type = ["cdylib"]`,
# and a wasm32 target. For now it is a rinch-FREE placeholder so the workspace
# compiles on the host.
ferropress-core = { workspace = true }
