[package]
name = "ferropress-render"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "THE single block-tree -> HTML renderer. Used by both the editor preview and the public site (WYSIWYG parity)."

[lints]
workspace = true

[dependencies]
ferropress-core = { workspace = true }
html-escape = { workspace = true }
# Custom (plugin) block payloads are opaque JSON; the `CustomBlockRenderer` seam
# names `serde_json::Value`. (No wasmtime/extism dep — the plugin host implements
# the trait; render only defines it.)
serde_json = { workspace = true }
