[package]
name = "ferropress-sched-tokiocron"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Scheduler baseline adapter: an in-process tokio cron loop for scheduled publishes and periodic rebuilds. No trigger-header / host coupling."

[lints]
workspace = true

[dependencies]
ferropress-core = { workspace = true }
async-trait = { workspace = true }
tokio = { workspace = true }
cron = { workspace = true }
