[package]
name = "ferropress-secrets-env"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "SecretStore baseline adapter: process environment + dotenv. Engine-shaped (no project_id / host coupling)."

[lints]
workspace = true

[dependencies]
ferropress-core = { workspace = true }
async-trait = { workspace = true }
dotenvy = { workspace = true }
