# ferropress-plugin-backlink-index — a reference Ferropress plugin showing the
# content:write capability in use ALONGSIDE content:read. It is an ACTION wired to
# `post.created` / `post.updated`: it parses the changed post's `wiki` blocks for
# `[[targets]]`, resolves each via `fp_lookup_slug` (read_store), and records a
# backlink on each resolvable target via `fp_set_meta` (write_store) — so every
# page can list "pages that link here." The backlink is keyed by the SOURCE post's
# id (`from:<id>`), so multiple linkers accumulate distinct keys without the plugin
# ever reading the target's current meta back.
#
# Outside the host workspace (the whole `plugins/` dir is excluded in the root
# Cargo.toml): wasm32-only, pins its own deps. Build with `cargo xtask build-plugins`.
[package]
name = "ferropress-plugin-backlink-index"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
publish = false
description = "Reference Ferropress plugin: a backlink-index action using the content:read + content:write capabilities (Extism PDK)."

[lib]
crate-type = ["cdylib"]

[dependencies]
extism-pdk = "1"
serde = { version = "1", features = ["derive"] }
# Parses the change payload + the `fp_lookup_slug` result; builds the `fp_set_meta` request.
serde_json = "1"

[profile.release]
opt-level = "z"
strip = true
