# ferropress-plugin-comment-mod — a reference Ferropress plugin: a comment
# moderation FILTER. Built with the Extism Rust PDK to a wasm32 `cdylib`, loaded
# by `ferropress-plugin-host` (extism). It is a PURE-COMPUTE, capability-zero
# plugin: it inspects ONLY the proposed comment in its input payload (keyword +
# link-flood heuristics) and returns the payload with `status` set to `spam` when
# it looks like spam — no host access, no store reads.
#
# This crate is OUTSIDE the host workspace (the whole `plugins/` dir is excluded in
# the root Cargo.toml): it is wasm32-only and pins its own deps. Build it with
# `cargo xtask build-plugins`, which compiles it and assembles
# `plugins/dist/comment-mod/`.
[package]
name = "ferropress-plugin-comment-mod"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
publish = false
description = "Reference Ferropress plugin: a comment-moderation spam filter (Extism PDK)."

[lib]
crate-type = ["cdylib"]

[dependencies]
extism-pdk = "1"
# The filter passes the comment payload through as JSON, mutating only `status`.
serde_json = "1"

[profile.release]
opt-level = "z"
strip = true
